--- a/2109116083_Ahmad_Fariz_Aisyar_Dafin_Posttest_2.ipynb
+++ b/2109116083_Ahmad_Fariz_Aisyar_Dafin_Posttest_2.ipynb
@@ -55,7 +55,7 @@
       "metadata": {
         "id": "TMS3FHPeGklD"
       },
-      "execution_count": 33,
+      "execution_count": 1,
       "outputs": []
     },
     {
@@ -2113,9 +2113,9 @@
           "height": 363
         },
         "id": "-fSzq1_2kWw6",
-        "outputId": "6831f6f2-5397-4f3a-a18c-af1729575d86"
+        "outputId": "528e7ba0-8aa7-4ef3-a0ad-65eb0ed75973"
       },
-      "execution_count": 29,
+      "execution_count": 2,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2147,7 +2147,7 @@
             ],
             "text/html": [
               "\n",
-              "  <div id=\"df-7328e201-4d54-4ab0-927e-15377ba5ffea\">\n",
+              "  <div id=\"df-64c5a543-ffcc-4c45-b534-951fe8556cef\">\n",
               "    <div class=\"colab-df-container\">\n",
               "      <div>\n",
               "<style scoped>\n",
@@ -2280,7 +2280,7 @@
               "  </tbody>\n",
               "</table>\n",
               "</div>\n",
-              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-7328e201-4d54-4ab0-927e-15377ba5ffea')\"\n",
+              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-64c5a543-ffcc-4c45-b534-951fe8556cef')\"\n",
               "              title=\"Convert this dataframe to an interactive table.\"\n",
               "              style=\"display:none;\">\n",
               "        \n",
@@ -2331,12 +2331,12 @@
               "\n",
               "      <script>\n",
               "        const buttonEl =\n",
-              "          document.querySelector('#df-7328e201-4d54-4ab0-927e-15377ba5ffea button.colab-df-convert');\n",
+              "          document.querySelector('#df-64c5a543-ffcc-4c45-b534-951fe8556cef button.colab-df-convert');\n",
               "        buttonEl.style.display =\n",
               "          google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "        async function convertToInteractive(key) {\n",
-              "          const element = document.querySelector('#df-7328e201-4d54-4ab0-927e-15377ba5ffea');\n",
+              "          const element = document.querySelector('#df-64c5a543-ffcc-4c45-b534-951fe8556cef');\n",
               "          const dataTable =\n",
               "            await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                     [key], {});\n",
@@ -2359,7 +2359,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 29
+          "execution_count": 2
         }
       ]
     },
@@ -2367,7 +2367,6 @@
       "cell_type": "code",
       "source": [
         "# 1. Tambahkan kolom jarak untuk menampilkan jarak dari dataset terhadap target prediksi\n",
-        "from sklearn.metrics.pairwise import euclidean_distances\n",
         "\n",
         "#sebelum menambah jarak, pertama kita membuat dataframe baru berdasarkan data yang telah diberikan\n",
         "data_baru = pd.DataFrame({'diagonal'    : [172.25],\n",
@@ -2377,8 +2376,16 @@
         "                         'margin_up'   : [3.25],\n",
         "                         'length'      : [112.48]})\n",
         "\n",
-        "#kemudian kita menghitung jarak antara setiap baris dari df2 dengan data_baru\n",
-        "df2['distance'] = euclidean_distances(df2[['diagonal', 'height_left', 'height_right', 'margin_low', 'margin_up', 'length']], data_baru)\n",
+        "\n",
+        "#ini merupakan rumus euclidean distance dimana tiap kolom pada dataset menjadi titik A dan data baru sebagai titik B\n",
+        "\n",
+        "df2['distance'] = np.sqrt((df2['diagonal']-172.25)**2+\n",
+        "                          (df2['height_left']-103.94)**2+\n",
+        "                          (df2['height_right']-103.68)**2+\n",
+        "                          (df2['margin_low']-4.14)**2+\n",
+        "                          (df2['margin_up']-3.25)**2+\n",
+        "                          (df2['length']-112.48)**2)\n",
+        "\n",
         "#dataframe setelah ditambahkan kolom jarak\n",
         "df2"
       ],
@@ -2388,9 +2395,9 @@
           "base_uri": "https://localhost:8080/",
           "height": 363
         },
-        "outputId": "0b8e1641-8404-4bb5-bf95-c8dbd5e9cdf0"
+        "outputId": "facebc31-c158-4054-a780-7b469f252fc1"
       },
-      "execution_count": 32,
+      "execution_count": 7,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2422,7 +2429,7 @@
             ],
             "text/html": [
               "\n",
-              "  <div id=\"df-a3d650ec-bba4-4046-87d0-5a748fe296b0\">\n",
+              "  <div id=\"df-5184da05-bcf0-4c91-8fe2-93472953b434\">\n",
               "    <div class=\"colab-df-container\">\n",
               "      <div>\n",
               "<style scoped>\n",
@@ -2566,7 +2573,7 @@
               "  </tbody>\n",
               "</table>\n",
               "</div>\n",
-              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-a3d650ec-bba4-4046-87d0-5a748fe296b0')\"\n",
+              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-5184da05-bcf0-4c91-8fe2-93472953b434')\"\n",
               "              title=\"Convert this dataframe to an interactive table.\"\n",
               "              style=\"display:none;\">\n",
               "        \n",
@@ -2617,12 +2624,12 @@
               "\n",
               "      <script>\n",
               "        const buttonEl =\n",
-              "          document.querySelector('#df-a3d650ec-bba4-4046-87d0-5a748fe296b0 button.colab-df-convert');\n",
+              "          document.querySelector('#df-5184da05-bcf0-4c91-8fe2-93472953b434 button.colab-df-convert');\n",
               "        buttonEl.style.display =\n",
               "          google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "        async function convertToInteractive(key) {\n",
-              "          const element = document.querySelector('#df-a3d650ec-bba4-4046-87d0-5a748fe296b0');\n",
+              "          const element = document.querySelector('#df-5184da05-bcf0-4c91-8fe2-93472953b434');\n",
               "          const dataTable =\n",
               "            await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                     [key], {});\n",
@@ -2645,7 +2652,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 32
+          "execution_count": 7
         }
       ]
     },
@@ -2673,9 +2680,9 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "5bb483ff-8cf1-437f-a130-9d66ebaadb5f"
+        "outputId": "186379f7-1f31-48a4-900c-ff937bb8bfae"
       },
-      "execution_count": 44,
+      "execution_count": 8,
       "outputs": [
         {
           "output_type": "stream",
@@ -2731,9 +2738,9 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "1e0c4e02-f955-4d9a-d9f1-4954a1ec816f"
+        "outputId": "7562a144-dcf5-4bb0-e7c1-a0d69a0b7659"
       },
-      "execution_count": 47,
+      "execution_count": 9,
       "outputs": [
         {
           "output_type": "stream",
@@ -2824,7 +2831,7 @@
         "id": "pbLNH6QuJ7mB",
         "outputId": "403def9a-eeb5-46b5-c3b8-0d1220e48f87"
       },
-      "execution_count": 50,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2897,7 +2904,7 @@
         "id": "EtGQH47UKYOx",
         "outputId": "08b674df-dcdd-4510-f9b1-2e279337f3b8"
       },
-      "execution_count": 51,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2950,7 +2957,7 @@
         "id": "CjR23ZZjKa0W",
         "outputId": "9850e5d3-caff-4120-b8fb-39bf6a51d21b"
       },
-      "execution_count": 52,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -3494,7 +3501,7 @@
       "metadata": {
         "id": "v6K-Yp8INhEP"
       },
-      "execution_count": 55,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -3540,7 +3547,7 @@
         "id": "GrJhAWSTOmBR",
         "outputId": "105ffbee-905a-48e2-ccb3-a67ab1a20c05"
       },
-      "execution_count": 56,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
